[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scripts/Objects/Obj_Modal.gd" type="Script" id=1]

[node name="Modal" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HopIn" type="Node" parent="."]

[node name="Process" type="Node" parent="."]

[node name="OnInput" type="Node" parent="."]

[node name="HopOut" type="Node" parent="."]

[node name="Popup" type="PopupPanel" parent="."]
visible = true
margin_right = 8.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = true

[node name="Label" type="Label" parent="Popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 18.0
